--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
       <div class="my-3 p-3 bg-white rounded box-shadow">
           <h6 class="border-bottom border-gray pb-2 mb-0">Recent updates</h6>
           <div class="media text-muted pt-3">
-            <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray" id="meaning">
+            <p class="media-body pb-3 mb-0 small lh-125" id="meaning">
             </p>
           </div>
-          <div class="media text-muted pt-3">
+          <!-- <div class="media text-muted pt-3">
           </div>
           <div class="media text-muted pt-3">
-          </div>
+          </div> -->
           <small class="d-block text-right mt-3">
-            <a href="#">All updates</a>
+            <a title="Author" href="www.github.com/Qudusayo">&copy; Dico</a>
           </small>
         </div>
       </main>
