--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
 
       <div class="my-3 p-3 bg-white rounded box-shadow">
-          <h6 class="border-bottom border-gray pb-2 mb-0">Recent updates</h6>
+          <h6 class="border-bottom border-gray pb-2 mb-0">Recent Meanings</h6>
           <div class="media text-muted pt-3">
             <p class="media-body pb-3 mb-0 small lh-125" id="meaning">
             </p>
