--- a/index.html
+++ b/index.html
@@ -1,73 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <link href="dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="offcanvas.css"/>
+    <link href="dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="offcanvas.css" />
     <link rel="stylesheet" href="style.css" />
 
     <script src="jquery.min.js"></script>
 
     <title>Dico</title>
-  </head>
+</head>
 
-  <body class="bg-light">
+<body class="bg-light">
 
     <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
-      <h3 class="navbar-brand">Dico</h3>
-      <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <h3 class="navbar-brand">Dico</h3>
+        <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
-        <button id="gap" disabled></button>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" id="input" placeholder="Word" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search">Search</button>
-        </form>
-      </div>
+        <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
+            <button id="gap" disabled></button>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" id="input" placeholder="Word" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search">Search</button>
+            </form>
+        </div>
     </nav>
 
 
     <main role="main" class="container">
-      <div class="d-flex align-items-center p-3 my-3 text-white-50 bg-purple rounded box-shadow">
-        <img class="mr-3" src="https://getbootstrap.com/assets/brand/bootstrap-outline.svg" alt="" width="48" height="48">
-        <div class="lh-100">
-          <h6 class="mb-0 text-white lh-100" id="top">Dico</h6>
-          <small id="trans">Getting Easy</small>
+        <div class="d-flex align-items-center p-3 my-3 text-white-50 bg-purple rounded box-shadow">
+            <img class="mr-3" src="https://getbootstrap.com/assets/brand/bootstrap-outline.svg" alt="" width="48"
+                height="48">
+            <div class="lh-100">
+                <h6 class="mb-0 text-white lh-100" id="top">Dico</h6>
+                <small id="trans">Getting Easy</small>
+            </div>
         </div>
-      </div>
 
-      <div class="my-3 p-3 bg-white rounded box-shadow">
-          <h6 class="border-bottom border-gray pb-2 mb-0">Recent Meanings</h6>
-          <div class="media text-muted pt-3">
-            <p class="media-body pb-3 mb-0 small lh-125" id="meaning">
-            </p>
-          </div>
-          <!-- <div class="media text-muted pt-3">
+        <div class="my-3 p-3 bg-white rounded box-shadow">
+            <h6 class="border-bottom border-gray pb-2 mb-0">Recent Meanings</h6>
+            <div class="media text-muted pt-3">
+                <p class="media-body pb-3 mb-0 small lh-125" id="meaning">
+                </p>
+            </div>
+            <!-- <div class="media text-muted pt-3">
           </div>
           <div class="media text-muted pt-3">
           </div> -->
-          <small class="d-block text-right mt-3">
-            <a title="Author" href="www.github.com/Qudusayo">&copy; Dico</a>
-          </small>
+            <small class="d-block text-right mt-3">
+                <a title="Author" href="www.github.com/Qudusayo">&copy; Dico</a>
+            </small>
         </div>
-      </main>
+    </main>
 
 
 
 
 
 
-  </body>
+</body>
 
 
-    <script src="dist/js/bootstrap.min.js"></script>
-    <script src="offcanvas.js"></script>
+<script src="dist/js/bootstrap.min.js"></script>
+<script src="offcanvas.js"></script>
 
-    <script src="app.js"></script>
-  </body>
+<script src="app.js"></script>
+</body>
+
 </html>
