--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body class="bg-light">
 
     <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
-        <h3 class="navbar-brand">Dico</h3>
+        <h3 class="navbar-brand">Dico<br><small>Simple Dictionary</small></h3>
         <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
             <span class="navbar-toggler-icon"></span>
         </button>
