--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
-
+    
+    <link rel="icon" href="dicologo.png">
     <title>Dico</title>
 </head>
 
