--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
+    
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="offcanvas.css" />
     <link rel="stylesheet" href="style.css" />
@@ -70,7 +71,7 @@
 
 </body>
 
-
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="dist/js/bootstrap.min.js"></script>
 <script src="offcanvas.js"></script>
 
