--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <!--<link href="dist/css/bootstrap.min.css" rel="stylesheet" />-->
+   <link href="dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="offcanvas.css" />
     <link rel="stylesheet" href="style.css" />
 
@@ -72,7 +72,7 @@
 </body>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<!--<script src="dist/js/bootstrap.min.js"></script>-->
+<script src="dist/js/bootstrap.min.js"></script>
 <script src="offcanvas.js"></script>
 
 <script src="app.js"></script>
